syntax = "proto2";

package transit_realtime;

message FeedMessage {
  required FeedHeader header = 1;
  repeated FeedEntity entity = 2;
}

message FeedHeader {
  required string gtfs_realtime_version = 1;
  optional uint64 timestamp = 2;
  optional Incrementality incrementality = 3 [default = FULL_DATASET];
  enum Incrementality {
    FULL_DATASET = 0;
    DIFFERENTIAL = 1;
  }
}

message FeedEntity {
  required string id = 1;
  optional bool is_deleted = 2 [default = false];
  optional VehiclePosition vehicle = 3; // Ensure this maps correctly to the vehicle field
}

message TripDescriptor {
  optional string trip_id = 1;
  optional string route_id = 2;
  optional string start_time = 3;
  optional string start_date = 4;
  optional ScheduleRelationship schedule_relationship = 5;
  enum ScheduleRelationship {
    SCHEDULED = 0;
    ADDED = 1;
    UNSCHEDULED = 2;
    CANCELED = 3;
  }
}

message VehicleDescriptor {
  optional string id = 1;
  optional string label = 2;
  optional string license_plate = 3;
}

message Position {
  optional float latitude = 1;
  optional float longitude = 2;
  optional float speed = 3;
  optional float bearing = 4;
  optional double odometer = 5;
}

message VehiclePosition {
  optional TripDescriptor trip = 1; // Map trip details
  optional VehicleDescriptor vehicle = 2; // Map vehicle details
  optional Position position = 3; // Map position details
  optional uint64 timestamp = 4;
  optional string stop_id = 5;
  optional VehicleStopStatus current_status = 6 [default = IN_TRANSIT_TO];
  enum VehicleStopStatus {
    INCOMING_AT = 0;
    STOPPED_AT = 1;
    IN_TRANSIT_TO = 2;
  }
}
